migrate user module to prisma

--- a/prisma/.env.example
+++ b/prisma/.env.example
@@ -4,4 +4,5 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL and SQLite.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mysql://johndoe:randompassword@localhost:3306/mydb"
+# https://www.prisma.io/docs/reference/database-connectors/mysql
+DATABASE_URL="mysql://USER:PASSWORD@HOST:PORT/DATABASE"
