feat: perfect auth swagger and dto

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,13 +11,9 @@
     "target": "es6",
     "sourceMap": true,
     "allowJs": true,
-    "outDir": "./dist"
+    "outDir": "./dist",
+    "skipLibCheck": true
   },
-    "include": [
-    "src/**/*"
-  ],
-    "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
