feat : swagger docs improve

--- a/package.json
+++ b/package.json
@@ -23,39 +23,41 @@
   },
   "homepage": "https://github.com/lujakob/nestjs-realworld-example-app#readme",
   "dependencies": {
-    "@nestjs/common": "^7.0.5",
-    "@nestjs/core": "^7.0.5",
-    "@nestjs/microservices": "^7.0.5",
-    "@nestjs/platform-express": "^7.0.5",
-    "@nestjs/swagger": "^4.4.0",
-    "@nestjs/testing": "^7.0.5",
-    "@nestjs/typeorm": "^7.0.0",
-    "@nestjs/websockets": "^7.0.5",
-    "argon2": "^0.26.2",
-    "class-transformer": "^0.2.3",
-    "class-validator": "^0.11.1",
+    "@nestjs/common": "^7.5.2",
+    "@nestjs/config": "^0.5.0",
+    "@nestjs/core": "^7.5.2",
+    "@nestjs/microservices": "^7.5.2",
+    "@nestjs/platform-express": "^7.5.2",
+    "@nestjs/swagger": "^4.7.3",
+    "@nestjs/testing": "^7.5.2",
+    "@nestjs/typeorm": "^7.1.4",
+    "@nestjs/websockets": "^7.5.2",
+    "argon2": "^0.27.0",
+    "class-transformer": "^0.3.1",
+    "class-validator": "^0.12.2",
+    "compression": "^1.7.4",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "passport-jwt": "^4.0.0",
     "reflect-metadata": "^0.1.13",
-    "rxjs": "^6.5.5",
-    "slug": "^1.1.0",
+    "rxjs": "^6.6.3",
+    "slug": "^4.0.2",
     "swagger-ui-express": "^4.1.4",
-    "typeorm": "^0.2.24",
-    "typescript": "^3.8.3"
+    "typeorm": "^0.2.29",
+    "typescript": "^4.0.5"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.4",
-    "atob": ">=2.1.0",
-    "deep-extend": ">=0.5.1",
+    "@types/jest": "^26.0.15",
+    "@types/node": "^14.14.7",
+    "atob": ">=2.1.2",
+    "deep-extend": ">=0.6.0",
     "extend": ">=3.0.2",
-    "jest": "^25.5.3",
-    "nodemon": "^1.19.4",
-    "supertest": "^3.4.2",
-    "ts-jest": "^25.4.0",
-    "ts-node": "^8.9.1"
+    "jest": "^26.6.3",
+    "nodemon": "^2.0.6",
+    "supertest": "^6.0.1",
+    "ts-jest": "^26.4.4",
+    "ts-node": "^9.0.0"
   }
 }
