--- a/ormconfig.json.example
+++ b/ormconfig.json.example
@@ -2,8 +2,8 @@
   "type": "mysql",
   "host": "localhost",
   "port": 3306,
-  "username": "your-mysql-username",
-  "password": "your-mysql-password",
+  "username": "root",
+  "password": "123456",
   "database": "nestjsrealworld",
   "entities": ["src/**/**.entity{.ts,.js}"],
   "synchronize": true
