moving ndirectories around to support terraform local build workflow issues occur if using terraform nested when building the app for heroku

--- a/app/Dockerfile.dev
+++ b/app/Dockerfile.dev
@@ -4,9 +4,10 @@ WORKDIR /usr/src/app
 
 COPY package*.json ./
 
-RUN npm ci --only=production
+RUN npm install
 
 COPY ./dist .
+COPY ormconfig.js .
 
 CMD [ "node", "main.js" ]
 
