changes to bring app up to test against in ci

--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -13,6 +13,9 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./app
 
     strategy:
       matrix:
@@ -21,6 +24,8 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
+    - run: docker-compose build
+    - run: docker-compose up -d
     - name: Use Node.js ${{ matrix.node-version }}
       uses: actions/setup-node@v2
       with:
