--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -91,6 +91,10 @@ jobs:
     # Generates an execution plan for Terraform
     - name: Terraform Plan
       run: terraform plan
+      env: 
+        HEROKU_API_KEY: ${{ secrets.HEROKU_API_TOKEN }}
+        # TF_APP_NAME: realworld-example-app
+        HEROKU_EMAIL: ${{ secrets.HEROKU_EMAIL }}
 
       # On push to master, build or change infrastructure according to Terraform configuration files
       # Note: It is recommended to set up a required "strict" status check in your repository for "Terraform Cloud". See the documentation on "strict" required status checks for more information: https://help.github.com/en/github/administering-a-repository/types-of-required-status-checks
