--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -65,6 +65,17 @@ jobs:
     # Checkout the repository to the GitHub Actions runner
     - name: Checkout
       uses: actions/checkout@v2
+
+    # Build the app for prod
+    - name: use node 14
+      uses: actions/setup-node@v2
+      with:
+        node-version: 14.x
+    - run: npm ci
+    - name: copy the config module
+      run: cp src/config.ts.example src/config.ts
+    - name: Compile the application
+      run: npm run prestart:prod
     
     - name: get terraform backend from heroku
       id: heroku
