set url for production env

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -54,7 +54,9 @@ jobs:
   terraform:
     name: 'Terraform'
     runs-on: ubuntu-latest
-    environment: production
+    environment:
+      name: production
+      url: https://realworld-example-app.herokuapp.com/api
 
     # Use the Bash shell regardless whether the GitHub Actions runner is ubuntu-latest, macos-latest, or windows-latest
     defaults:
