tidyup #5 only deploy on push to master i.e. once pr merged

--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -45,10 +45,12 @@
 name: 'Terraform'
 
 on:
+  # may use the release event to kick the terraform deploy off
+  # release:
+  #   types: [created]
   push:
     branches:
     - master
-  pull_request:
 
 jobs:
   terraform:
