feat: adding files

--- a/package.json
+++ b/package.json
@@ -32,13 +32,15 @@
     "@nestjs/typeorm": "^7.0.0",
     "@nestjs/websockets": "^7.0.5",
     "argon2": "^0.26.2",
+    "buffer-from": "^1.1.1",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.1",
     "crypto": "^1.0.1",
     "crypto-js": "^4.0.0",
     "jsonwebtoken": "^8.5.1",
-    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
     "passport-jwt": "^4.0.0",
+    "pg": "^8.6.0",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^6.5.5",
     "slug": "^1.1.0",
