feat: tf ignore

--- a/.gitignore
+++ b/.gitignore
@@ -25,4 +25,11 @@ coverage
 dist/*
 
 #tf state
-terraform/.terraform
+terraform/.terraform/**
+
+# Local .terraform directories
+**/.terraform/*
+
+# .tfstate files
+*.tfstate
+*.tfstate.*
