feat: tf ignore

--- a/.gitignore
+++ b/.gitignore
@@ -33,3 +33,10 @@ terraform/.terraform/**
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
+# Ignore override files as they are usually used to override resources locally and so
+# are not checked in
+override.tf
+override.tf.json
+*_override.tf
+*_override.tf.json
