--- a/charts/realworld/values.yaml
+++ b/charts/realworld/values.yaml
@@ -2,7 +2,7 @@
 # This is a YAML-formatted file.
 # Declare variables to be passed into your templates.
 
-replicaCount: 1
+replicaCount: 2
 
 image:
   repository: gcr.io/default-1148/realworld:dev
@@ -37,17 +37,12 @@ ingress:
   enabled: true
   className: ""
   annotations: {}
-    # kubernetes.io/ingress.class: nginx
-    # kubernetes.io/tls-acme: "true"
   hosts:
     - host: realworld.cainelli.me
       paths:
         - path: /
           pathType: ImplementationSpecific
   tls: []
-  #  - secretName: chart-example-tls
-  #    hosts:
-  #      - chart-example.local
 
 resources:
   limits:
@@ -74,6 +69,6 @@ postgresql:
     - name: POSTGRES_USER
       value: realworld
     - name: POSTGRES_PASSWORD
-      value: 3q2rzKkJ34ahszFN
+      value: 3q2rzKkJ34ahszFN # FIXME: handle secrets
     - name: POSTGRES_DB
-      value: nestjsrealworld # TODO: handle secrets
+      value: nestjsrealworld
