--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -72,5 +72,5 @@ jobs:
         run: exit 1
 
       - name: Terraform Apply
-        if: github.ref == 'refs/heads/main' && github.event_name == 'push'
+        if: github.event_name == 'pull_request'
         run: terraform apply -auto-approve
